修改了StringUtils的使用源（apache.common.lang3） 添加了一个SqlFilter，过滤非法字符串