@@ -12,15 +12,20 @@
 
 package com.niyredra.notjustnote.modules.sys.service.impl;
 
+import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
+import org.apache.commons.lang3.StringUtils;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import com.niyredra.notjustnote.common.exception.ArException;
+import com.niyredra.notjustnote.common.utils.DateTimeUtils;
 import com.niyredra.notjustnote.modules.sys.dao.SysCaptchaDao;
 import com.niyredra.notjustnote.modules.sys.model.SysCaptcha;
 import com.niyredra.notjustnote.modules.sys.service.SysCaptchaService;
-import com.wf.captcha.GifCaptcha;
+import com.wf.captcha.ArithmeticCaptcha;
+import com.wf.captcha.ChineseCaptcha;
+import com.wf.captcha.SpecCaptcha;
+import com.wf.captcha.base.Captcha;
 import org.springframework.stereotype.Service;
 
-import java.awt.image.BufferedImage;
 import java.util.Date;
 
 /**
@@ -31,26 +36,56 @@ import java.util.Date;
 @Service
 public class SysCaptchaServiceImpl extends ServiceImpl<SysCaptchaDao, SysCaptcha> implements SysCaptchaService {
 
-    private GifCaptcha gifCaptcha;
+    @Override
+    public Captcha getArithmeticCaptcha(String uuid) {
+        if (StringUtils.isBlank(uuid)) throw new ArException("uuid不能为空");
+
+        ArithmeticCaptcha captcha = new ArithmeticCaptcha();
+//        captcha.setLen(6);
+        String code = captcha.text();
+        setCaptcha(uuid, code);
+        return captcha;
+    }
 
     @Override
-    public BufferedImage getCaptcha(String uuid) {
-        if (uuid.isBlank()) {
-            throw new ArException("uuid不能为空");
-        }
+    public Captcha getChineseCaptcha(String uuid) {
+        if (StringUtils.isBlank(uuid)) throw new ArException("uuid不能为空");
 
-        String code = gifCaptcha.text();
+        ChineseCaptcha captcha = new ChineseCaptcha();
+        String code = captcha.text();
+        setCaptcha(uuid, code);
+        return captcha;
+    }
 
-        SysCaptcha captcha = new SysCaptcha();
-        captcha.setUuid(uuid);
-        captcha.setCode(code);
-        captcha.setExpireTime(new Date());
+    @Override
+    public Captcha getSpecCaptcha(String uuid) {
+        if (StringUtils.isBlank(uuid)) throw new ArException("uuid不能为空");
 
-        return null;
+        SpecCaptcha captcha = new SpecCaptcha();
+        String code = captcha.text();
+        setCaptcha(uuid, code);
+        return captcha;
     }
 
     @Override
     public boolean validate(String uuid, String code) {
-        return false;
+        SysCaptcha captcha = getOne(
+                new QueryWrapper<SysCaptcha>()
+                        .eq("uuid", uuid)
+        );
+        if (captcha == null) return false;
+        removeById(uuid);
+        // 会有一部分 纯刷验证码但是不填写的 这种空出来的数据每日晚上进行一次专门的清理
+        return captcha.getCode().equalsIgnoreCase(code)
+                && captcha.getExpireTime().getTime() >= System.currentTimeMillis();
     }
+
+    private void setCaptcha(String uuid, String code) {
+        SysCaptcha captcha = new SysCaptcha();
+        captcha.setUuid(uuid);
+        captcha.setCode(code);
+        captcha.setExpireTime(DateTimeUtils.addMinutes(new Date(), 5));
+        this.save(captcha);
+    }
+
 }
